Corrigi erros larilas

--- a/Projeto1/Relatorio/Relatorio PLOG.tex
+++ b/Projeto1/Relatorio/Relatorio PLOG.tex
@@ -86,7 +86,7 @@ Segue-se uma explicação das regras do Syrtis, bem como alguns exemplos para me
 
 \subsection{História}
 
-	O Syris é um jogo de estratégia em que os dois jogadores se encontram numa ilha instável e desconhecida. A paisagem da ilha está sempre em mudança, e o avanço do mar faz com que a ilha esteja a tornar-se cada vez mais pequena... Para ajudar à festa, este avanço está a fazer com que se formem areias movediças, limitando ainda mais o espaço habitável na ilha... Apenas um dos jogadores poderá sobreviver, quem será capaz de ser o mais forte?
+	O Syris é um jogo de estratégia em que os dois jogadores se encontram numa ilha instável e desconhecida. A paisagem da ilha está sempre em mudança, e o avanço do mar faz com que a ilha esteja a tornar-se cada vez mais pequena... Para complicar ainda mais, este avanço está a fazer com que se formem areias movediças, limitando ainda mais o espaço habitável na ilha... Apenas um dos jogadores poderá sobreviver, quem será capaz de ser o mais forte?
 	
 \subsection{Objetivo}
 	
@@ -180,7 +180,7 @@ A figura \ref{fig:sinktile} mostra um exemplo de quais peças podem ser afundada
 \end{figure}
 
 
-O jogador preto pode afundar quaisquer peças que estejam marcadas com uma estrela. Nenuma peça branca está numa posição que lhe permita afundar alguma peça.
+O jogador preto pode afundar quaisquer peças que estejam marcadas com uma estrela. Nenhuma peça branca está numa posição que lhe permita afundar alguma peça.
 
 \subsubsection{Deslocar uma peça}
 
