Upload of another version

--- a/Projeto1/Relatorio/Relatorio PLOG.tex
+++ b/Projeto1/Relatorio/Relatorio PLOG.tex
@@ -337,7 +337,7 @@ A figura \ref{fig:outputboard} mostra uma imagem com o output produzido.
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{outputboard.png}
-\caption{Output produzido pelas chamadas a majorBoard e minorBoard}
+\caption{Output produzido no terminal}
 \label{fig:outputboard}
 \end{figure}
 
