Fix some errors on report

--- a/Projeto1/Relatorio Final/template.tex
+++ b/Projeto1/Relatorio Final/template.tex
@@ -16,7 +16,7 @@
 \setlength{\textwidth}{16cm}
 \setlength{\textheight}{22cm}
 
-\title{\Huge\textbf{Título do Trabalho}\linebreak\linebreak\linebreak
+\title{\Huge\textbf{Syrtis}\linebreak\linebreak\linebreak
 \Large\textbf{Relatório Final}\linebreak\linebreak
 \linebreak\linebreak
 \includegraphics[scale=0.1]{feup-logo.png}\linebreak\linebreak
@@ -42,7 +42,7 @@ Pedro Afonso Castro - 201304205 \\
 
 \section*{Resumo}
 
-Para a unidade curricular de Programação em Lógica, o nosso grupo comprometeu-se a desenvolver na linguagem PROLOG o jogo Syrtis, um jogo de estratégia cujo objetivo é criar uma ilha com todas as peças da nossa cor ou forma, impedindo que o adversário faça o mesmo com as suas.
+Para a unidade curricular de Programação em Lógica, o grupo comprometeu-se a desenvolver na linguagem PROLOG o jogo Syrtis, um jogo de estratégia cujo objetivo é criar uma ilha com todas as peças da nossa cor ou forma, impedindo que o adversário faça o mesmo com as suas.
 
 O objetivo deste projeto foi colocarmos em prática os assuntos abordados nas aulas, bem como compreender um paradigma de programação no qual não tínhamos ainda qualquer experiência. Para tal, fizemos pesquisa, estudo e planeamento, de forma a podermos cumprir não só os objetivos propostos pelos professores, como também os nossos objetivos de aprofundar os nossos conhecimentos acerca de um novo paradigma de programação. Como resultado, ficámos com um jogo, executável em linha de comandos, bastante interessante e robusto, que nos orgulhamos de ter realizado.
 
@@ -381,7 +381,7 @@ Este critério baseia-se no facto de que quanto mais peças da nossa cor/forma e
 \begin{equation*}
 \begin{multlined}
 Resultado = numPecasCorBot + numPecasFormaBot - \\
-(numPecasCorJogador + numPecasFormaBot)
+(numPecasCorJogador + numPecasFormaJogador)
 \end{multlined}
 \end{equation*}
 
